# fiberpassbackend

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  railway.json  vercel.json
docs/: automation-api.md  automation-deployment.md  automation-e2e-demo.md  deployment-env-checklist.md  fiber-channel-and-live-test.md  fiber-node-deployment.md  fiber-node-railway.md  system-design.md  vault-fiber-money-model.md  vault-testnet-deployment.md
infra/fiber-node/: .env.example  Caddyfile  Dockerfile  docker-compose.yml  nginx.conf.template  railway-entrypoint.sh  render-config.mjs
lockscripts/: README.md
lockscripts/fiberpass-vault-lock/: Cargo.toml  README.md
lockscripts/fiberpass-vault-lock/scripts/: build-and-hash.mjs  deploy-testnet.mjs
lockscripts/fiberpass-vault-lock/src/: error.rs  main.rs
scripts/: automation-e2e-demo.mjs
src/: app.ts  server.ts
src/config/: env.ts
src/data/: seed.ts
src/domain/: automation.ts
src/lib/: asyncHandler.ts  ckbExplorer.ts  errors.ts  liveEvents.ts  time.ts
src/middleware/: auth.middleware.ts
src/models/: app.model.ts  auth.model.ts  automation.model.ts  session.model.ts  wallet.model.ts  walletFunding.model.ts  webhookDelivery.model.ts
src/routes/: apps.routes.ts  auth.routes.ts  demo.routes.ts  sessions.routes.ts  wallet.routes.ts
src/services/: app.service.ts  auth.service.ts  automation.service.ts  ckbChain.service.ts  email.service.ts  fiberAdapter.ts  fiberChannel.service.ts  fiberExitGateway.service.ts  fiberLiquidityBridge.service.ts  fiberNode.service.ts  (+6 more)
(+6 files in other folders)
